--- a/pages/trashy-animals.html
+++ b/pages/trashy-animals.html
@@ -143,7 +143,7 @@
                 <div class="row starter">
                     <div class="col-sm-1"></div>
                     <div class="col-10" style="display: flex;justify-content: center;">
-                        <img src="../assets/sad frog 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of Frog holding a heart, bitten ear, and rugged appearance">
+                        <img src="../assets/Sad frog 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of Frog holding a heart, bitten ear, and rugged appearance">
                     </div>
                     <div class="col-sm-1"></div>
                 </div>
