--- a/birthdays/sam.html
+++ b/birthdays/sam.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-HPQFMFSJ4C');
 </script>
-    <title>EMILIA HERNANDEZ</title>
+    <title>Sam</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="../spiritscoutsPictures/wjMam_.png">
